unpackaged/main/default/objects/Country_Tax_Rates__c/Country_Tax_Rates__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Tax rates for each Country</description>
    <label>Country Tax Rates</label>
</CustomObject>