unpackaged/main/default/objects/Country_Tax_Rates__c/fields/Asia__c.field-meta.xml
<CustomField>
    <fullName>Asia__c</fullName>
    <label>Asia</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>