unpackaged/main/default/objects/Country_Tax_Rates__c/fields/Australia__c.field-meta.xml
<CustomField>
    <fullName>Australia__c</fullName>
    <label>Australia</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>