unpackaged/main/default/objects/Country_Tax_Rates__c/fields/New_Zealand__c.field-meta.xml
<CustomField>
    <fullName>New_Zealand__c</fullName>
    <label>New Zealand</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>