unpackaged/main/default/objects/Country_Tax_Rates__c/fields/United_Kingdom__c.field-meta.xml
<CustomField>
    <fullName>United_Kingdom__c</fullName>
    <label>United Kingdom</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>